# reamp

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.json
include/reamp/: audio_engine.h  bitmap.h  gui_renderer.h  player.h  playlist.h  skin_engine.h  window.h
legacy_rust_prototype/: Cargo.toml
legacy_rust_prototype/src/: audio.rs  main.rs
legacy_rust_prototype/src/gui/: mod.rs  widgets.rs
skins/: CREATE_SKIN.md  DESIGN_GUIDE.md  QUICK_START.md  README.md
src/: App.tsx  index.css  main.cpp
src/audio/: audio_engine.cpp
src/components/: AudioEngine.ts  Controls.tsx  EffectsUnit.tsx  Equalizer.tsx  PlaylistUnit.tsx  PowerOverlay.tsx  SpatialUnit.tsx
src/core/: player.cpp  playlist.cpp
src/gui/: bitmap.cpp  gui_renderer.cpp  skin_engine.cpp  window.cpp
web_prototype/: README.md  index.html  package-lock.json
web_prototype/src/components/: ErrorBoundary.tsx  PlayerUI.tsx  PresetUnit.tsx  RackUnit.tsx  Visualizer.tsx
